fix text alignment in footer

--- a/dndstats/src/App.css
+++ b/dndstats/src/App.css
@@ -136,7 +136,7 @@ footer{
   height: 15vh;
   background-color: #383937;
   color: #FAF9F6;
-
+  align-content: center;
   padding-left: 5%;
   padding-top: 20px;
 
